--- a/package.json
+++ b/package.json
@@ -13,6 +13,13 @@
     "typescript": "^4.8.4"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/index.ts"
+  },
+  "dependencies": {
+    "@fastify/cors": "^8.1.1",
+    "@fastify/formbody": "^7.3.0",
+    "fastify": "^4.9.2",
+    "fastify-decorators": "^3.14.1"
   }
 }
