--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/jest": "^29.2.1",
     "@types/node": "^18.11.9",
     "jest": "^29.2.2",
+    "prisma": "^4.5.0",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
@@ -19,6 +20,7 @@
   "dependencies": {
     "@fastify/cors": "^8.1.1",
     "@fastify/formbody": "^7.3.0",
+    "@prisma/client": "^4.5.0",
     "fastify": "^4.9.2",
     "fastify-decorators": "^3.14.1"
   }
