--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.2.1",
     "@types/node": "^18.11.9",
     "jest": "^29.2.2",
@@ -21,6 +22,7 @@
     "@fastify/cors": "^8.1.1",
     "@fastify/formbody": "^7.3.0",
     "@prisma/client": "^4.5.0",
+    "bcrypt": "^5.1.0",
     "fastify": "^4.9.2",
     "fastify-decorators": "^3.14.1"
   }
