--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "test": "jest",
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/index.ts"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "dependencies": {
     "@fastify/cors": "^8.1.1",
     "@fastify/formbody": "^7.3.0",
     "@prisma/client": "^4.5.0",
     "bcrypt": "^5.1.0",
     "fastify": "^4.9.2",
-    "fastify-decorators": "^3.14.1"
+    "fastify-decorators": "^3.14.1",
+    "ioredis": "^5.2.4"
   }
 }
