--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.2.1",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.9",
     "jest": "^29.2.2",
     "prisma": "^4.5.0",
@@ -28,6 +29,7 @@
     "bcrypt": "^5.1.0",
     "fastify": "^4.9.2",
     "fastify-decorators": "^3.14.1",
-    "ioredis": "^5.2.4"
+    "ioredis": "^5.2.4",
+    "jsonwebtoken": "^8.5.1"
   }
 }
