--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,27 @@
 version: "3.8"
 services:
-  # app:
-  #   build: .
-  #   depends_on:
-  #     - postgres
-  #     - redis
-  #   links:
-  #     - postgres
-  #     - redis
-  #   command: npm run dev
-  #   ports:
-  #     - ${APP_PORT}:${APP_PORT}
-  #     - 9229:9229
-  #   volumes:
-  #     - .:/usr/app
-  #     - /usr/app/nodu_modules
+  app:
+    container_name: application
+    env_file:
+      - .env
+    # restart: always
+    build: .
+    depends_on:
+      - postgres
+      - redis
+    links:
+      - "postgres:postgres"
+      - "redis:redis"
+    ports:
+      - ${APP_PORT}:${APP_PORT}
+      - 9229:9229
+    volumes:
+      - .:/usr/app
+      - /usr/app/node_modules
   postgres:
     image: postgres:10.3
+    container_name: postgres
+    hostname: postgres
     restart: always
     environment:
       - POSTGRES_USER=${DB_USER}
@@ -25,12 +30,15 @@ services:
       - postgres:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+    expose:
+      - '3306'
   redis:
     image: bitnami/redis:latest
+    container_name: redis
     ports:
       - "${REDIS_PORT}:${REDIS_PORT}"
     expose:
-    - ${REDIS_PORT}
+      - ${REDIS_PORT}
     environment:
       - REDIS_PASSWORD=${REDIS_PASSWORD}
 volumes:
