--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Install Dependencies
         run: yarn
         
+      - name: Build
+        run: npx tsc
+        
       - uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.SSH_HOST }}
